<resources>
    <string name="app_name">BurdigalApp</string>
    <string name="title_activity_maps">Burdigal\'App</string>
    <string name="selection_question">Que cherchez-vous ?</string>
    <string name="display_position">Voir les positions</string>
    <string name="display_points">Voir la liste des points</string>
    <string name= "map">Carte</string>
    <string name="detail">Detail du Point</string>
    <string name="list_point">Liste des points</string>
    <string name="return_to_map">Retour à la carte</string>
    <string name="btn_return">Retour</string>

    <string name="error_network_title">Erreur reseau</string>
    <string name="error_network_unavailable">Connexion indisponible... L\'application pourrait ne pas fonctionner correctement.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_title">Rechercher</string>

    <string name="undefined_value">Non renseigné</string>

    <string name="cyclepark_spot_number">Nombre de places : </string>
    <string name="cyclepark_fixation_type">Type de fixation : </string>
    <string name="cycle_park_title">Parkings deux roues</string>

    <string name="garden_title">Parcs et jardins</string>
    <string name="garden_type">Type de parc : </string>
    <string name="garden_gestion_type">Gestion type : </string>
    <string name="garden_label">Label : </string>
    <string name="diplay_list_of_points">Voir la liste des points</string>
    <string name="garden_use">Utilisation :</string>
    <string name="parking_title">Parkings</string>
    <string name="parking_type">Type de parking :</string>
    <string name="parking_spot_number">Nombre de places :</string>
    <string name="toilet_title">Toilettes</string>
    <string name="toilet_neighbourhood">Quartier :</string>
    <string name="toilet_type">Type de toilette :</string>
    <string name="locate_on_map">Localiser sur la carte</string>
    <string name="in_bdx_center">Dans Bordeaux</string>
    <string name="around_position">Autour de moi</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_valider">Valider</string>
    <string name="dialog_nb_points_title">Nombre de points </string>
    <string name="points_by_service">points par service</string>
    <string name="btn_modify">Modifier</string>
    <string name="display">Afficher</string>
</resources>
