<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presenter.fragment.detail.ToiletDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_fragment_title_height"
        android:textSize="@dimen/text_size_detail_title"
        android:textColor="@android:color/white"
        android:background="@color/toilet_color"
        android:gravity="center"
        android:text="@string/toilet_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_top_low"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/marker_toilet"
                    android:layout_marginEnd="@dimen/layout_margin_right_med"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_toilet_address"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_normal"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_toilet_neighbourhood"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_app_low_2"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/toilet_neighbourhood"/>


            <TextView
                android:id="@+id/tv_toilet_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_app_low_2"
                android:textSize="@dimen/text_size_normal"
                android:text="@string/toilet_type"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_focus"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:background="@drawable/button_simple">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/layout_margin_right_low"
            android:src="@drawable/ic_map_locate"/>

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_low"
            android:text="@string/locate_on_map"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        android:id="@+id/btn_return"
        android:background="@drawable/button_simple"/>

</LinearLayout>
